// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Braze's triggerCanvas destination action: all fields 1`] = `
Object {
  "canvas_entry_properties": Object {
    "testType": "jjoQf0&!",
  },
  "canvas_id": "jjoQf0&!",
  "recipients": Array [
    Object {
      "attributes": Object {
        "testType": "jjoQf0&!",
      },
      "canvas_entry_properties": Object {
        "testType": "jjoQf0&!",
      },
      "email": "uwe@tizo.bd",
      "external_user_id": "jjoQf0&!",
      "prioritization": Array [
        "identified",
        "identified",
      ],
      "send_to_existing_only": true,
      "user_alias": Object {
        "alias_label": "test-alias-label",
        "alias_name": "test-alias",
      },
    },
  ],
}
`;

exports[`Testing snapshot for Braze's triggerCanvas destination action: all fields 2`] = `
Headers {
  Symbol(map): Object {
    "authorization": Array [
      "Bearer jjoQf0&!",
    ],
    "content-type": Array [
      "application/json",
    ],
    "user-agent": Array [
      "Segment (Actions)",
    ],
  },
}
`;

exports[`Testing snapshot for Braze's triggerCanvas destination action: required fields 1`] = `
Object {
  "canvas_id": "jjoQf0&!",
  "recipients": Array [
    Object {
      "external_user_id": "test-user-123",
      "send_to_existing_only": true,
    },
  ],
}
`;

exports[`Testing snapshot for Braze's triggerCanvas destination action: required fields 2`] = `
Headers {
  Symbol(map): Object {
    "authorization": Array [
      "Bearer jjoQf0&!",
    ],
    "content-type": Array [
      "application/json",
    ],
    "user-agent": Array [
      "Segment (Actions)",
    ],
  },
}
`;

exports[`Testing snapshot for Braze's triggerCanvas destination action: with audience object 1`] = `
Object {
  "audience": Object {
    "AND": Array [
      Object {
        "custom_attribute": Object {
          "attribute_name": "eye_color",
          "comparison": "equals",
          "value": "blue",
        },
      },
      Object {
        "custom_attribute": Object {
          "attribute_name": "age",
          "comparison": "greater_than",
          "value": 30,
        },
      },
    ],
  },
  "broadcast": true,
  "canvas_entry_properties": Object {
    "testType": "jjoQf0&!",
  },
  "canvas_id": "jjoQf0&!",
  "prioritization": Object {
    "first_priority": "identified",
    "second_priority": "identified",
  },
}
`;

exports[`Testing snapshot for Braze's triggerCanvas destination action: with audience object 2`] = `
Headers {
  Symbol(map): Object {
    "authorization": Array [
      "Bearer jjoQf0&!",
    ],
    "content-type": Array [
      "application/json",
    ],
    "user-agent": Array [
      "Segment (Actions)",
    ],
  },
}
`;

exports[`Testing snapshot for Braze's triggerCanvas destination action: with canvas entry properties 1`] = `
Object {
  "canvas_entry_properties": Object {
    "discount_amount": 25,
    "product_name": "Test Product",
    "user_tier": "premium",
  },
  "canvas_id": "jjoQf0&!",
  "recipients": Array [
    Object {
      "attributes": Object {
        "testType": "jjoQf0&!",
      },
      "canvas_entry_properties": Object {
        "testType": "jjoQf0&!",
      },
      "email": "uwe@tizo.bd",
      "external_user_id": "jjoQf0&!",
      "prioritization": Array [
        "identified",
        "identified",
      ],
      "send_to_existing_only": true,
      "user_alias": Object {},
    },
  ],
}
`;

exports[`Testing snapshot for Braze's triggerCanvas destination action: with canvas entry properties 2`] = `
Headers {
  Symbol(map): Object {
    "authorization": Array [
      "Bearer jjoQf0&!",
    ],
    "content-type": Array [
      "application/json",
    ],
    "user-agent": Array [
      "Segment (Actions)",
    ],
  },
}
`;

exports[`Testing snapshot for Braze's triggerCanvas destination action: with prioritization 1`] = `
Object {
  "canvas_entry_properties": Object {
    "testType": "jjoQf0&!",
  },
  "canvas_id": "jjoQf0&!",
  "recipients": Array [
    Object {
      "email": "test@example.com",
      "external_user_id": "user-123",
      "prioritization": Array [
        "identified",
        "most_recently_updated",
      ],
      "send_to_existing_only": true,
    },
  ],
}
`;

exports[`Testing snapshot for Braze's triggerCanvas destination action: with prioritization 2`] = `
Headers {
  Symbol(map): Object {
    "authorization": Array [
      "Bearer jjoQf0&!",
    ],
    "content-type": Array [
      "application/json",
    ],
    "user-agent": Array [
      "Segment (Actions)",
    ],
  },
}
`;

exports[`Testing snapshot for Braze's triggerCanvas destination action: with recipients array 1`] = `
Object {
  "canvas_entry_properties": Object {
    "testType": "jjoQf0&!",
  },
  "canvas_id": "jjoQf0&!",
  "recipients": Array [
    Object {
      "canvas_entry_properties": Object {
        "customData": "test",
        "name": "John Doe",
      },
      "email": "test@example.com",
      "external_user_id": "user-123",
      "prioritization": Array [
        "identified",
        "identified",
      ],
      "send_to_existing_only": true,
    },
    Object {
      "email": "another@example.com",
      "external_user_id": "user-456",
      "prioritization": Array [
        "identified",
        "identified",
      ],
      "send_to_existing_only": true,
    },
  ],
}
`;

exports[`Testing snapshot for Braze's triggerCanvas destination action: with recipients array 2`] = `
Headers {
  Symbol(map): Object {
    "authorization": Array [
      "Bearer jjoQf0&!",
    ],
    "content-type": Array [
      "application/json",
    ],
    "user-agent": Array [
      "Segment (Actions)",
    ],
  },
}
`;
